objects/Quota__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <description>Quota in Number of desks</description>
        <inlineHelpText>Quota in Number of desks</inlineHelpText>
        <label>Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>Date from which the quota is effective. Quotas are per month</description>
        <inlineHelpText>Date from which the quota is effective. Quotas are per month</inlineHelpText>
        <label>EffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales person for who the quota is defined</description>
        <inlineHelpText>Sales person for who the quota is defined</inlineHelpText>
        <label>SalesPerson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Quota in currency</description>
        <inlineHelpText>Quota in Currency</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quota</label>
    <nameField>
        <label>Quota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SalesPerson__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>Count__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>